fix layout on mobiles and added more videos

--- a/themes/book/sass/_navigation.scss
+++ b/themes/book/sass/_navigation.scss
@@ -49,9 +49,3 @@
 .menu-hidden {
   width: 0;
 }
-
-@include max-screen(600px) {
-  .menu {
-    width: 0;
-  }
-}
